# fastapi-huggingface-template

./: Dockerfile  README.md  build.sh  pyproject.toml  run.sh
scripts/: bootstrap.py  speecht5_tts.py  tts.py
src/: app.py  classifier.py  model.py
