[tool.poetry]
name = "fastapi-huggingface"
version = "0.1.0"
description = "Test if I can get a model to run."
authors = ["Frank Hampus Weslien <frankhampusweslien@google.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
fastapi = "^0.104.1"
transformers = "^4.35.0"
torch = "^2.1.0"
scipy = "^1.11.3"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
